<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.suid.tripreport2.MouvementFormActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textViewNumeroVol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numero_vol" />

            <EditText
                android:id="@+id/editTextNumeroVol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textViewAvion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/avion" />

            <Spinner
                android:id="@+id/spinnerAvion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distance" />

            <EditText
                android:id="@+id/editTextDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textViewNbPassager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nb_passager" />

            <EditText
                android:id="@+id/editTextNbPassager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <Switch
                android:id="@+id/switchIntracom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/est_intracom" />

            <TextView
                android:id="@+id/textViewAeroportDepart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aeroport_depart" />

            <Spinner
                android:id="@+id/spinnerAeroportDepart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewDateHeureDepart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_heure_depart" />

            <EditText
                android:id="@+id/editTextDateHeureDepart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusedByDefault="false"
                android:inputType="datetime"
                android:onClick="showTimePickerDialog" />

            <TextView
                android:id="@+id/textViewAeroportArrivee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aeroport_arrivee" />

            <Spinner
                android:id="@+id/spinnerAeroportArrivee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewDateHeureArrivee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_heure_arrivee" />

            <EditText
                android:id="@+id/editTextDateHeureArrivee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:onClick="showTimePickerDialog" />

            <TextView
                android:id="@+id/textViewDureeVol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/duree_vol" />

            <EditText
                android:id="@+id/editTextDureeVol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_enregistrer" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
